out
In file included from /usr/include/c++/12/set:61,
                 from stdc++.h:87:
/usr/include/c++/12/bits/stl_set.h: In instantiation of ‘void std::__cxx1998::set<_Key, _Compare, _Alloc>::insert(_InputIterator, _InputIterator) [with _InputIterator = int; _Key = std::pair<long long int, long long int>; _Compare = std::less<std::pair<long long int, long long int> >; _Alloc = std::allocator<std::pair<long long int, long long int> >]’:
/usr/include/c++/12/debug/set.h:291:19:   required from ‘void std::__debug::set<_Key, _Cmp, _Allocator>::insert(_InputIterator, _InputIterator) [with _InputIterator = int; _Key = std::pair<long long int, long long int>; _Compare = std::less<std::pair<long long int, long long int> >; _Allocator = std::allocator<std::pair<long long int, long long int> >]’
test.cpp:280:24:   required from here
/usr/include/c++/12/bits/stl_set.h:567:38: error: no matching function for call to ‘std::_Rb_tree<std::pair<long long int, long long int>, std::pair<long long int, long long int>, std::_Identity<std::pair<long long int, long long int> >, std::less<std::pair<long long int, long long int> >, std::allocator<std::pair<long long int, long long int> > >::_M_insert_range_unique(int&, int&)’
  567 |         { _M_t._M_insert_range_unique(__first, __last); }
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/12/map:60,
                 from stdc++.h:81:
/usr/include/c++/12/bits/stl_tree.h:1100:9: note: candidate: ‘template<class _InputIterator> std::__enable_if_t<std::is_same<_Val, typename std::iterator_traits<_InputIterator>::value_type>::value> std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_M_insert_range_unique(_InputIterator, _InputIterator) [with _Key = std::pair<long long int, long long int>; _Val = std::pair<long long int, long long int>; _KeyOfValue = std::_Identity<std::pair<long long int, long long int> >; _Compare = std::less<std::pair<long long int, long long int> >; _Alloc = std::allocator<std::pair<long long int, long long int> >]’
 1100 |         _M_insert_range_unique(_InputIterator __first, _InputIterator __last)
      |         ^~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/12/bits/stl_tree.h:1100:9: note:   template argument deduction/substitution failed:
/usr/include/c++/12/bits/stl_tree.h: In substitution of ‘template<class _InputIterator> std::__enable_if_t<std::is_same<std::pair<long long int, long long int>, typename std::iterator_traits< <template-parameter-1-1> >::value_type>::value, void> std::_Rb_tree<std::pair<long long int, long long int>, std::pair<long long int, long long int>, std::_Identity<std::pair<long long int, long long int> >, std::less<std::pair<long long int, long long int> >, std::allocator<std::pair<long long int, long long int> > >::_M_insert_range_unique(_InputIterator, _InputIterator) [with _InputIterator = int]’:
/usr/include/c++/12/bits/stl_set.h:567:31:   required from ‘void std::__cxx1998::set<_Key, _Compare, _Alloc>::insert(_InputIterator, _InputIterator) [with _InputIterator = int; _Key = std::pair<long long int, long long int>; _Compare = std::less<std::pair<long long int, long long int> >; _Alloc = std::allocator<std::pair<long long int, long long int> >]’
/usr/include/c++/12/debug/set.h:291:19:   required from ‘void std::__debug::set<_Key, _Cmp, _Allocator>::insert(_InputIterator, _InputIterator) [with _InputIterator = int; _Key = std::pair<long long int, long long int>; _Compare = std::less<std::pair<long long int, long long int> >; _Allocator = std::allocator<std::pair<long long int, long long int> >]’
test.cpp:280:24:   required from here
/usr/include/c++/12/bits/stl_tree.h:1100:9: error: no type named ‘value_type’ in ‘struct std::iterator_traits<int>’
/usr/include/c++/12/bits/stl_set.h: In instantiation of ‘void std::__cxx1998::set<_Key, _Compare, _Alloc>::insert(_InputIterator, _InputIterator) [with _InputIterator = int; _Key = std::pair<long long int, long long int>; _Compare = std::less<std::pair<long long int, long long int> >; _Alloc = std::allocator<std::pair<long long int, long long int> >]’:
/usr/include/c++/12/debug/set.h:291:19:   required from ‘void std::__debug::set<_Key, _Cmp, _Allocator>::insert(_InputIterator, _InputIterator) [with _InputIterator = int; _Key = std::pair<long long int, long long int>; _Compare = std::less<std::pair<long long int, long long int> >; _Allocator = std::allocator<std::pair<long long int, long long int> >]’
test.cpp:280:24:   required from here
/usr/include/c++/12/bits/stl_tree.h:1109:9: note: candidate: ‘template<class _InputIterator> std::__enable_if_t<(! std::is_same<_Val, typename std::iterator_traits<_InputIterator>::value_type>::value)> std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_M_insert_range_unique(_InputIterator, _InputIterator) [with _Key = std::pair<long long int, long long int>; _Val = std::pair<long long int, long long int>; _KeyOfValue = std::_Identity<std::pair<long long int, long long int> >; _Compare = std::less<std::pair<long long int, long long int> >; _Alloc = std::allocator<std::pair<long long int, long long int> >]’
 1109 |         _M_insert_range_unique(_InputIterator __first, _InputIterator __last)
      |         ^~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/12/bits/stl_tree.h:1109:9: note:   template argument deduction/substitution failed:
/usr/include/c++/12/bits/stl_tree.h: In substitution of ‘template<class _InputIterator> std::__enable_if_t<(! std::is_same<std::pair<long long int, long long int>, typename std::iterator_traits< <template-parameter-1-1> >::value_type>::value), void> std::_Rb_tree<std::pair<long long int, long long int>, std::pair<long long int, long long int>, std::_Identity<std::pair<long long int, long long int> >, std::less<std::pair<long long int, long long int> >, std::allocator<std::pair<long long int, long long int> > >::_M_insert_range_unique(_InputIterator, _InputIterator) [with _InputIterator = int]’:
/usr/include/c++/12/bits/stl_set.h:567:31:   required from ‘void std::__cxx1998::set<_Key, _Compare, _Alloc>::insert(_InputIterator, _InputIterator) [with _InputIterator = int; _Key = std::pair<long long int, long long int>; _Compare = std::less<std::pair<long long int, long long int> >; _Alloc = std::allocator<std::pair<long long int, long long int> >]’
/usr/include/c++/12/debug/set.h:291:19:   required from ‘void std::__debug::set<_Key, _Cmp, _Allocator>::insert(_InputIterator, _InputIterator) [with _InputIterator = int; _Key = std::pair<long long int, long long int>; _Compare = std::less<std::pair<long long int, long long int> >; _Allocator = std::allocator<std::pair<long long int, long long int> >]’
test.cpp:280:24:   required from here
/usr/include/c++/12/bits/stl_tree.h:1108:59: error: no type named ‘value_type’ in ‘struct std::iterator_traits<int>’
 1108 |         __enable_if_t<!__same_value_type<_InputIterator>::value>
      |                                                           ^~~~~
